added local storage

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
   </div>
 
-  <script src="storage.js"></script>
+  <script src="loc_storage.js"></script>
   <script src="weather.js"></script>
   <script src="show_weather.js"></script>
   <script src="app.js"></script>
